# Generate-PDF-Invoices

./: README.md  pyproject.toml
scripts/: cli.py
src/invoice_generator/: __init__.py.py  __main__.py.py  gui.py  main.py  models.py  pdf.py  storage.py  utils.py
tests/: test_models.py  test_pdf.py  test_utils.py
