[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-generator"
version = "0.1.0"
description = "GUI + CLI Invoice PDF Generator (Tkinter, ReportLab)"
readme = "README.md"
authors = [{ name = "Mobin Yousefi", email = "" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
"reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0.0",
"ruff>=0.5.0",
"black>=24.0.0",
]

[project.scripts]
invoice-generator = "invoice_generator.main:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B", "UP", "W"]
indent-width = 4
src = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
